--- a/rozwiazania.html
+++ b/rozwiazania.html
@@ -1,101 +1,68 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Rozwiązania — Baltic Digital Institute</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rozwiązania - Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
+  <link rel="icon" href="assets/svg/Logo main.svg">
 </head>
-<body class="bg-[#0A192F] text-white antialiased">
-  <!-- header -->
-  <header class="fixed w-full top-0 bg-[#0A192F]/90 z-50">
-    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
-      <a href="index.html" class="flex items-center gap-3"><img src="assets/svg/Logo main.svg" class="h-10" alt="" /><span class="font-bold">Baltic Digital Institute</span></a>
-      <nav class="hidden md:flex gap-8">
-        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
-        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-      </nav>
-      <button id="menu-btn" class="md:hidden p-1 flex flex-col gap-1"><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span></button>
-    </div>
-    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
-      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
-      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
-    </div>
+<body class="bg-white text-gray-900">
+
+  <!-- Navbar -->
+  <header class="fixed w-full bg-white shadow z-50">
+    <nav class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
+      <a href="index.html">
+        <img src="assets/svg/Logo main.svg" alt="Baltic Digital Institute" class="h-10">
+      </a>
+      <ul class="hidden md:flex space-x-6 font-medium">
+        <li><a href="index.html" class="hover:text-cyan-600">Strona główna</a></li>
+        <li><a href="o-nas.html" class="hover:text-cyan-600">O nas</a></li>
+        <li><a href="rozwiazania.html" class="hover:text-cyan-600">Rozwiązania</a></li>
+        <li><a href="kontakt.html" class="hover:text-cyan-600">Kontakt</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main class="pt-24">
-    <section class="py-12 text-center bg-[#0F2238]">
-      <div class="max-w-4xl mx-auto px-6">
-        <h1 class="text-4xl font-bold mb-4">Nasze rozwiązania</h1>
-        <p class="text-gray-300">Trzy filary: wdrożenia AI, badania & certyfikacja oraz programy edukacyjne. Poniżej szybki przegląd i lista zasobów, których potrzebujemy do pełnych stron usługowych.</p>
+  <!-- Rozwiązania -->
+  <section class="pt-32 pb-20 max-w-6xl mx-auto px-6">
+    <h1 class="text-4xl font-bold mb-12 text-center">Nasze rozwiązania</h1>
+    <p class="text-lg text-gray-700 text-center mb-16">
+      Strona w budowie – poniżej prezentujemy nasze trzy kluczowe filary, które rozwijamy w projektach badawczo-rozwojowych
+      i współpracy międzynarodowej.
+    </p>
+
+    <div class="grid md:grid-cols-3 gap-10">
+      <!-- AI -->
+      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
+        <div class="text-5xl mb-4">🤖</div>
+        <h3 class="text-xl font-semibold mb-2">Sztuczna Inteligencja</h3>
+        <p class="text-gray-600">Rozwijamy rozwiązania AI w edukacji, administracji i biznesie. Wkrótce więcej szczegółów.</p>
       </div>
-    </section>
-
-    <section class="py-12 max-w-6xl mx-auto px-6">
-      <div class="grid md:grid-cols-3 gap-8">
-        <!-- AI -->
-        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
-          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Wdrożenia AI</h3>
-          <p class="text-gray-300 mb-4">Projektowanie i wdrażanie rozwiązań opartych na modelach i agentach AI: od proof-of-concept po integrację produkcyjną.</p>
-          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
-          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
-            <li>Case study (opis projektu + mierzalne wyniki)</li>
-            <li>Ikony/diagramy architektury (WebP/SVG)</li>
-            <li>Lista technologii i stacku (ML, MLOps, infra)</li>
-            <li>Referencje klientów / krótkie cytaty</li>
-          </ul>
-        </div>
-
-        <!-- Cyber -->
-        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
-          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Cyber Lab & Certyfikacja</h3>
-          <p class="text-gray-300 mb-4">Laboratorium testowe, audyty bezpieczeństwa oraz ścieżka do akredytacji i certyfikacji produktów.</p>
-          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
-          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
-            <li>Specyfikacja usług (audyt, pentest, certyfikacja)</li>
-            <li>Przykładowe raporty (redacted) / szablony</li>
-            <li>Loga standardów / PCA (gdzie to istotne)</li>
-            <li>Dowody kompetencji (publikacje, testy)</li>
-          </ul>
-        </div>
-
-        <!-- Edukacja -->
-        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
-          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Edukacja i kompetencje</h3>
-          <p class="text-gray-300 mb-4">Kursy, szkolenia i programy grantowe — od podstaw do szkoleń specjalistycznych w BUR i online.</p>
-          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
-          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
-            <li>Oferta kursów (moduły, długość, certyfikaty)</li>
-            <li>Materiały promocyjne / sylabus</li>
-            <li>Testimoniale uczestników</li>
-            <li>Harmonogramy i CTA do zapisu</li>
-          </ul>
-        </div>
+      <!-- Cyber -->
+      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
+        <div class="text-5xl mb-4">🔒</div>
+        <h3 class="text-xl font-semibold mb-2">Cyberbezpieczeństwo</h3>
+        <p class="text-gray-600">Budujemy kompetencje w zakresie cyberochrony oraz odporności systemów cyfrowych.</p>
       </div>
-
-      <div class="mt-10 text-center">
-        <p class="text-gray-300 mb-4">Na tej chwili szczegółowe strony usług będą uzupełnione po dostarczeniu powyższych materiałów — możesz wrzucać case studies i grafiki a ja podpię już gotowe sekcje.</p>
-        <a href="kontakt.html" class="inline-block px-6 py-3 bg-[#64FFDA] text-[#0A192F] rounded-md font-semibold hover:bg-[#52e0c5]">Umów konsultację</a>
+      <!-- Resilience -->
+      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
+        <div class="text-5xl mb-4">🌍</div>
+        <h3 class="text-xl font-semibold mb-2">Cyfrowa odporność</h3>
+        <p class="text-gray-600">Projektujemy strategie cyfrowe wzmacniające odporność organizacji i instytucji.</p>
       </div>
-    </section>
-  </main>
-
-  <footer class="bg-[#0A192F]/95 py-8 text-gray-400 text-center">
-    <div class="max-w-6xl mx-auto px-6">
-      <p>© 2025 Baltic Digital Institute</p>
     </div>
-  </footer>
 
-  <script>
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
-  </script>
+    <div class="text-center mt-16">
+      <a href="kontakt.html" class="px-6 py-3 bg-cyan-600 hover:bg-cyan-700 text-white rounded-lg shadow">
+        Skontaktuj się z nami
+      </a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-100 py-8 text-center text-sm text-gray-600">
+    © 2025 Baltic Digital Institute. Wszystkie prawa zastrzeżone.
+  </footer>
 </body>
 </html>
