--- a/rozwiazania.html
+++ b/rozwiazania.html
@@ -3,66 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rozwiązania - Baltic Digital Institute</title>
+  <title>Rozwiązania dla biznesu - Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="assets/svg/Logo main.svg">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-baltic-navy text-gray-100">
 
   <!-- Navbar -->
-  <header class="fixed w-full bg-white shadow z-50">
-    <nav class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
-      <a href="index.html">
-        <img src="assets/svg/Logo main.svg" alt="Baltic Digital Institute" class="h-10">
-      </a>
-      <ul class="hidden md:flex space-x-6 font-medium">
-        <li><a href="index.html" class="hover:text-cyan-600">Strona główna</a></li>
-        <li><a href="o-nas.html" class="hover:text-cyan-600">O nas</a></li>
-        <li><a href="rozwiazania.html" class="hover:text-cyan-600">Rozwiązania</a></li>
-        <li><a href="kontakt.html" class="hover:text-cyan-600">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Rozwiązania -->
-  <section class="pt-32 pb-20 max-w-6xl mx-auto px-6">
-    <h1 class="text-4xl font-bold mb-12 text-center">Nasze rozwiązania</h1>
-    <p class="text-lg text-gray-700 text-center mb-16">
-      Strona w budowie – poniżej prezentujemy nasze trzy kluczowe filary, które rozwijamy w projektach badawczo-rozwojowych
-      i współpracy międzynarodowej.
-    </p>
-
-    <div class="grid md:grid-cols-3 gap-10">
-      <!-- AI -->
-      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
-        <div class="text-5xl mb-4">🤖</div>
-        <h3 class="text-xl font-semibold mb-2">Sztuczna Inteligencja</h3>
-        <p class="text-gray-600">Rozwijamy rozwiązania AI w edukacji, administracji i biznesie. Wkrótce więcej szczegółów.</p>
-      </div>
-      <!-- Cyber -->
-      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
-        <div class="text-5xl mb-4">🔒</div>
-        <h3 class="text-xl font-semibold mb-2">Cyberbezpieczeństwo</h3>
-        <p class="text-gray-600">Budujemy kompetencje w zakresie cyberochrony oraz odporności systemów cyfrowych.</p>
-      </div>
-      <!-- Resilience -->
-      <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center bg-white">
-        <div class="text-5xl mb-4">🌍</div>
-        <h3 class="text-xl font-semibold mb-2">Cyfrowa odporność</h3>
-        <p class="text-gray-600">Projektujemy strategie cyfrowe wzmacniające odporność organizacji i instytucji.</p>
-      </div>
+  <nav class="navbar flex justify-between items-center">
+    <a href="index.html" class="text-xl font-bold text-cyber-turq">BDI</a>
+    <div class="hidden md:flex space-x-6">
+      <a href="rozwiazania.html" class="text-cyber-turq">Rozwiązania</a>
+      <a href="o-nas.html">O nas</a>
+      <a href="inicjatywy.html">Inicjatywy</a>
+      <a href="baza-wiedzy.html">Baza wiedzy</a>
+      <a href="kontakt.html">Kontakt</a>
     </div>
+  </nav>
 
-    <div class="text-center mt-16">
-      <a href="kontakt.html" class="px-6 py-3 bg-cyan-600 hover:bg-cyan-700 text-white rounded-lg shadow">
-        Skontaktuj się z nami
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Rozwiązania dla Biznesu</h1>
+    <p>Wspieramy organizacje w cyfrowej transformacji, szkoleniu kadr i zapewnianiu najwyższych standardów bezpieczeństwa.</p>
+  </section>
+
+  <!-- Główne filary -->
+  <section class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-3xl font-bold text-center text-cyber-turq mb-12">Nasze filary</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <a href="rozwiazania-transformacja.html" class="bg-dark-steel p-6 rounded-xl shadow hover:shadow-lg transition block">
+        <h3 class="text-xl font-semibold text-cyber-turq">Transformacja Cyfrowa</h3>
+        <p class="mt-3">Od analizy procesów po wdrożenie systemów RevOps — pomagamy budować przewagę rynkową dzięki technologiom.</p>
+      </a>
+      <a href="rozwiazania-szkolenia.html" class="bg-dark-steel p-6 rounded-xl shadow hover:shadow-lg transition block">
+        <h3 class="text-xl font-semibold text-cyber-turq">Szkolenia Specjalistyczne</h3>
+        <p class="mt-3">Nowoczesne programy dla kadry zarządzającej i specjalistów — od AI po cyberbezpieczeństwo.</p>
+      </a>
+      <a href="rozwiazania-badania.html" class="bg-dark-steel p-6 rounded-xl shadow hover:shadow-lg transition block">
+        <h3 class="text-xl font-semibold text-cyber-turq">Badania i Certyfikacja</h3>
+        <p class="mt-3">Ośrodek certyfikacji i badań technologii cyfrowych w ramach regionalnego centrum doskonałości.</p>
       </a>
     </div>
   </section>
 
+  <!-- CTA -->
+  <section class="text-center py-16 bg-dark-steel">
+    <h2 class="text-2xl font-bold text-cyber-turq mb-4">Zbuduj przewagę dzięki cyfrowej odporności</h2>
+    <a href="kontakt.html" class="btn">Skontaktuj się z nami</a>
+  </section>
+
   <!-- Footer -->
-  <footer class="bg-gray-100 py-8 text-center text-sm text-gray-600">
+  <footer>
     © 2025 Baltic Digital Institute. Wszystkie prawa zastrzeżone.
   </footer>
+
 </body>
 </html>
