--- a/o-nas.html
+++ b/o-nas.html
@@ -3,124 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>O nas - Baltic Digital Institute</title>
+  <title>O Nas - Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="assets/svg/Logo main.svg">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-baltic-navy text-gray-100">
 
   <!-- Navbar -->
-  <header class="fixed w-full bg-white shadow z-50">
-    <nav class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
-      <a href="index.html">
-        <img src="assets/svg/Logo main.svg" alt="Baltic Digital Institute" class="h-10">
-      </a>
-      <ul class="hidden md:flex space-x-6 font-medium">
-        <li><a href="index.html" class="hover:text-cyan-600">Strona główna</a></li>
-        <li><a href="o-nas.html" class="hover:text-cyan-600">O nas</a></li>
-        <li><a href="rozwiazania.html" class="hover:text-cyan-600">Rozwiązania</a></li>
-        <li><a href="kontakt.html" class="hover:text-cyan-600">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
+  <nav class="navbar flex justify-between items-center">
+    <a href="index.html" class="text-xl font-bold text-cyber-turq">BDI</a>
+    <div class="hidden md:flex space-x-6">
+      <a href="rozwiazania.html">Rozwiązania</a>
+      <a href="o-nas.html" class="text-cyber-turq">O nas</a>
+      <a href="inicjatywy.html">Inicjatywy</a>
+      <a href="baza-wiedzy.html">Baza wiedzy</a>
+      <a href="kontakt.html">Kontakt</a>
+    </div>
+  </nav>
 
-  <!-- O nas -->
-  <section class="pt-32 pb-20 max-w-6xl mx-auto px-6">
-    <h1 class="text-4xl font-bold mb-8">O nas</h1>
-    <p class="text-lg text-gray-700 mb-8">
-      Baltic Digital Institute powstał w wyniku transformacji Fundacji Instytut Nowoczesnej Edukacji (2021–2025).
-      Naszą misją jest wspieranie transformacji cyfrowej w regionie Morza Bałtyckiego w obszarach AI, cyberbezpieczeństwa
-      i cyfrowej odporności.
-    </p>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>O Nas</h1>
+    <p>Poznaj filozofię, wartości i zespół Baltic Digital Institute</p>
+  </section>
 
-    <!-- Zarząd i Rada -->
-    <div class="grid md:grid-cols-2 gap-10">
-      <!-- Krzysztof -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">Krzysztof Rek</h3>
-          <p class="text-sm text-gray-600">Prezes Zarządu</p>
+  <!-- Nasza Filozofia i Wartości -->
+  <section class="py-16 px-6 max-w-6xl mx-auto space-y-12">
+    <div>
+      <h2 class="text-3xl font-bold text-cyber-turq mb-4">Technologia z Sumieniem</h2>
+      <p class="mb-6">
+        W Baltic Digital Institute wierzymy, że technologia nie jest celem samym w sobie, lecz narzędziem do budowania lepszej,
+        bezpieczniejszej i bardziej sprawiedliwej przyszłości. Nasze działania opierają się na czterech fundamentalnych wartościach.
+      </p>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="p-6 bg-dark-steel rounded-lg shadow">
+          <h3 class="text-xl font-semibold text-cyber-turq">Innowacja</h3>
+          <p>Przesuwamy granice, tworząc rozwiązania na najwyższym światowym poziomie.</p>
         </div>
-      </div>
-      <!-- Monika -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/monika-zawadzka.jpg" alt="Monika Zawadzka" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">Monika Zawadzka</h3>
-          <p class="text-sm text-gray-600">Wiceprezes Zarządu</p>
+        <div class="p-6 bg-dark-steel rounded-lg shadow">
+          <h3 class="text-xl font-semibold text-cyber-turq">Odpowiedzialność</h3>
+          <p>Działamy transparentnie, z poszanowaniem wartości ludzkich i społecznych.</p>
         </div>
-      </div>
-      <!-- Adam -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/adam-przadka.jpg" alt="Adam Prządka" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">dr Adam Prządka</h3>
-          <p class="text-sm text-gray-600">Rada Programowa</p>
+        <div class="p-6 bg-dark-steel rounded-lg shadow">
+          <h3 class="text-xl font-semibold text-cyber-turq">Współpraca</h3>
+          <p>Budujemy silne partnerstwa międzysektorowe, działając na rzecz całego ekosystemu.</p>
         </div>
-      </div>
-      <!-- Karolina -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/karolina-janczukowicz.jpg" alt="Karolina Janczukowicz" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">dr Karolina Janczukowicz</h3>
-          <p class="text-sm text-gray-600">Rada Programowa</p>
-        </div>
-      </div>
-      <!-- Zuzanna -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/zuzanna-wiorogorska.jpg" alt="Zuzanna Wiorogórska" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">dr Zuzanna Wiorogórska</h3>
-          <p class="text-sm text-gray-600">Rada Programowa</p>
-        </div>
-      </div>
-      <!-- Danuta -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/danuta-rek.jpg" alt="Danuta Rek" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">mgr Danuta Rek</h3>
-          <p class="text-sm text-gray-600">Rada Programowa</p>
-        </div>
-      </div>
-      <!-- Mirosław -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/miroslaw-lukaszewicz.jpg" alt="Mirosław Łukasiewicz" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">dr Mirosław Łukasiewicz</h3>
-          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
-        </div>
-      </div>
-      <!-- Joanna -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/joanna-kosowicz.jpg" alt="Joanna Kosowicz" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">Joanna Kosowicz</h3>
-          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
-        </div>
-      </div>
-      <!-- Placeholder: Jose -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/placeholder-portrait.jpg" alt="Jose Antonio Gamez Martinez" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">dr Jose Antonio Gamez Martinez</h3>
-          <p class="text-sm text-gray-600">Rada Programowa</p>
-        </div>
-      </div>
-      <!-- Placeholder: Mogadorska -->
-      <div class="flex items-center space-x-4">
-        <img src="assets/img/placeholder-portrait.jpg" alt="Aleksandra Natalia Mogadorska" class="w-24 h-24 object-cover rounded-full shadow">
-        <div>
-          <h3 class="font-semibold text-lg">Aleksandra Natalia Mogadorska</h3>
-          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
+        <div class="p-6 bg-dark-steel rounded-lg shadow">
+          <h3 class="text-xl font-semibold text-cyber-turq">Wpływ Społeczny</h3>
+          <p>Wykorzystujemy technologię do rozwiązywania realnych problemów i budowania odporności.</p>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- CTA -->
+  <section class="text-center py-16 bg-dark-steel">
+    <h2 class="text-2xl font-bold text-cyber-turq mb-4">Poznaj nasz zespół</h2>
+    <a href="o-nas-zespol.html" class="btn">Zobacz Zespół</a>
+  </section>
+
   <!-- Footer -->
-  <footer class="bg-gray-100 py-8 text-center text-sm text-gray-600">
+  <footer>
     © 2025 Baltic Digital Institute. Wszystkie prawa zastrzeżone.
   </footer>
+
 </body>
 </html>
