--- a/o-nas.html
+++ b/o-nas.html
@@ -4,66 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>O nas – Baltic Digital Institute</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; background-color: #0A192F; color: #F9FAFB; }
-    .accent { color: #64FFDA; }
-    .btn-accent { background-color: #64FFDA; color: #0A192F; }
-    .btn-accent:hover { background-color: #52e0c4; }
+    body { font-family: 'Inter', sans-serif; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen">
-
+<body class="bg-[#0A192F] text-[#F9FAFB]">
   <!-- Navbar -->
-  <nav class="bg-gray-900 p-4">
+  <nav class="bg-[#0A192F] p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-xl font-bold accent">Baltic Digital Institute</a>
+      <a href="index.html" class="text-[#64FFDA] font-bold text-xl">BDI</a>
       <div class="space-x-6">
-        <a href="rozwiazania-dla-biznesu.html" class="hover:underline">Rozwiązania</a>
-        <a href="o-nas.html" class="hover:underline">O nas</a>
-        <a href="inicjatywy.html" class="hover:underline">Inicjatywy</a>
-        <a href="baza-wiedzy.html" class="hover:underline">Baza wiedzy</a>
-        <a href="kontakt.html" class="hover:underline">Kontakt</a>
+        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
+        <a href="rozwiazania-dla-biznesu.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+        <a href="inicjatywy.html" class="hover:text-[#64FFDA]">Inicjatywy</a>
+        <a href="baza-wiedzy.html" class="hover:text-[#64FFDA]">Baza wiedzy</a>
+        <a href="o-nas.html" class="text-[#64FFDA] font-semibold">O nas</a>
+        <a href="o-nas-zespol.html" class="hover:text-[#64FFDA]">Zespół</a>
+        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
       </div>
     </div>
   </nav>
 
   <!-- Hero -->
-  <header class="bg-gray-800 py-20 text-center">
+  <section class="bg-[#112240] py-20 text-center">
     <h1 class="text-4xl font-bold mb-4">O nas</h1>
-    <p class="text-lg text-gray-300">Poznaj naszą misję, zespół i sposób działania</p>
-  </header>
+    <p class="text-lg text-gray-300">Baltic Digital Institute – budujemy odporność cyfrową</p>
+  </section>
 
-  <!-- Content -->
-  <main class="flex-grow container mx-auto py-16 px-6 space-y-8">
-    <section>
-      <h2 class="text-2xl font-semibold mb-4 accent">Kim jesteśmy</h2>
-      <p class="text-gray-300">
-        Baltic Digital Institute to organizacja działająca na styku technologii, innowacji i odpowiedzialności społecznej. 
-        Naszym celem jest rozwój i wdrażanie rozwiązań, które wzmacniają odporność cyfrową biznesu, administracji i społeczeństwa.
-      </p>
-    </section>
+  <!-- Kim jesteśmy -->
+  <section class="container mx-auto py-16 px-6">
+    <h2 class="text-3xl font-semibold mb-6 text-center">Kim jesteśmy?</h2>
+    <p class="max-w-3xl mx-auto text-center text-gray-300 leading-relaxed">
+      Baltic Digital Institute (BDI) to organizacja działająca na styku technologii, edukacji i cyberbezpieczeństwa.
+      Wspieramy biznes, administrację i społeczeństwo w procesie transformacji cyfrowej. Naszą misją jest rozwój
+      odporności cyfrowej w regionie Morza Bałtyckiego i poza nim.
+    </p>
+  </section>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-4 accent">Model działania</h2>
-      <p class="text-gray-300">
-        Pracujemy w modelu <strong>hybrydowym</strong>, łącząc kompetencje ekspertów z różnych dziedzin z potencjałem 
-        <span class="accent">agentów sztucznej inteligencji Baltic Brain</span>. 
-        Dzięki temu ludzie i AI współdziałają, wzajemnie się uzupełniając – tworząc zespół, który jest jednocześnie 
-        elastyczny, skalowalny i nastawiony na efektywność.
-      </p>
-    </section>
-
-    <div class="text-center mt-10">
-      <a href="o-nas-zespol.html" class="btn-accent px-6 py-3 rounded-lg font-semibold">Poznaj nasz zespół</a>
+  <!-- Nasz model -->
+  <section class="bg-[#112240] py-16 px-6">
+    <h2 class="text-3xl font-semibold mb-6 text-center">Nasz model</h2>
+    <p class="max-w-3xl mx-auto text-center text-gray-300 leading-relaxed">
+      Działamy w <span class="text-[#64FFDA] font-semibold">modelu hybrydowym</span> – łączymy kompetencje ekspertów
+      ludzkich (zarząd, rady, doradcy, architekci AI) z potencjałem
+      <span class="text-[#64FFDA] font-semibold">agentów cyfrowych Baltic Brain</span>.
+      Dzięki temu możemy szybciej analizować dane, projektować innowacyjne rozwiązania i wspierać decyzje strategiczne.
+    </p>
+    <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-4xl mx-auto">
+      <div class="bg-[#0A192F] p-6 rounded-lg shadow-lg text-center">
+        <h3 class="text-xl font-semibold mb-2">Ludzie</h3>
+        <p class="text-gray-400">Eksperci, doradcy i liderzy – tworzą kierunki działań i budują relacje.</p>
+      </div>
+      <div class="bg-[#0A192F] p-6 rounded-lg shadow-lg text-center">
+        <h3 class="text-xl font-semibold mb-2">Baltic Brain</h3>
+        <p class="text-gray-400">Agenci AI – wspierają procesy analityczne, badawcze i wdrożeniowe.</p>
+      </div>
     </div>
-  </main>
+  </section>
+
+  <!-- Odnośnik do zespołu -->
+  <section class="container mx-auto py-16 px-6 text-center">
+    <h2 class="text-2xl font-semibold mb-4">Poznaj nasz zespół</h2>
+    <p class="text-gray-300 mb-6">Zarząd, Rada Programowa, Rada Nadzorcza oraz role ludzkie i cyfrowe</p>
+    <a href="o-nas-zespol.html" class="bg-[#64FFDA] text-[#0A192F] px-6 py-3 rounded-lg font-semibold hover:bg-[#52e6c5]">
+      Zobacz Zespół
+    </a>
+  </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 py-6 text-center text-gray-400 text-sm">
-    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
+  <footer class="bg-[#0A192F] py-6 text-center text-gray-400 text-sm">
+    © 2025 Baltic Digital Institute
   </footer>
-
 </body>
 </html>
